<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="4dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:background="@drawable/background_1"
    tools:context=".AboutActivity">

    <RelativeLayout
        android:id="@+id/about_activity_logo_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/about_logo_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_1"/>

        <TextView
            android:id="@+id/about_activity_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_logo_text"
            android:textSize="22dp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/about_logo_img"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/about_activity_logo_section">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/about_activity_desc_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/about_activity_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Popeye The sailor Man"
                    android:textSize="18dp"
                    android:textColor="@color/menu_btn"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:id="@+id/about_activity_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_text"
                    android:textSize="16dp"
                    android:textColor="@color/menu_btn"
                    android:textStyle="normal"
                    android:layout_marginTop="10dp"
                    android:gravity="left"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/about_activity_title"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about_activity_desc_section"
                android:paddingLeft="10dp"
                android:layout_marginBottom="60dp"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/about_activity_back_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/ripple_background"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="Back To Home"
                    android:textStyle="normal"
                    android:textColor="@color/menu_btn"
                    android:textSize="14dp"
                    android:textAllCaps="false"
                    android:onClick="goToHomeBtnClick"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/about_activity_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="@string/BANNER_320x50"
        ads:adUnitId="@string/AD_ACTIVITY_ABOUT_BANNER">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>