<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="4dp"
    android:paddingLeft="4dp"
    android:paddingRight="4dp"
    android:background="@drawable/background_1"
    tools:context=".MenuActivity">

    <RelativeLayout
        android:id="@+id/menu_activity_logo_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/menu_logo_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_1"/>

        <TextView
            android:id="@+id/menu_activity_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_logo_text"
            android:textSize="22dp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/menu_logo_img"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/menu_activity_menu_btn_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_below="@id/menu_activity_logo_section">

        <Button
            android:id="@+id/menu_activity_btn_index"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="Watch Popeye The Sailor Man"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textColor="@color/menu_btn"
            android:onClick="watchBtnClick"
            android:layout_marginTop="10dp"
            android:background="@drawable/ripple_background"/>

        <Button
            android:id="@+id/menu_activity_btn_about"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="About This App"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textColor="@color/menu_btn"
            android:onClick="aboutBtnClick"
            android:layout_marginTop="10dp"
            android:background="@drawable/ripple_background"
            android:layout_below="@+id/menu_activity_btn_index"/>

        <Button
            android:id="@+id/menu_activity_btn_rating"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="App Rating"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textColor="@color/menu_btn"
            android:onClick="ratingBtnClick"
            android:layout_marginTop="10dp"
            android:background="@drawable/ripple_background"
            android:layout_below="@+id/menu_activity_btn_about"/>

        <Button
            android:id="@+id/menu_activity_btn_more_app"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="More App"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textColor="@color/menu_btn"
            android:onClick="moreAppBtnClick"
            android:layout_marginTop="10dp"
            android:background="@drawable/ripple_background"
            android:layout_below="@+id/menu_activity_btn_rating"/>

        <Button
            android:id="@+id/menu_activity_btn_exit"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="Exit"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textColor="@color/menu_btn"
            android:onClick="exitBtnClick"
            android:layout_marginTop="10dp"
            android:background="@drawable/ripple_background"
            android:layout_below="@+id/menu_activity_btn_more_app"/>

    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/menu_activity_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="@string/BANNER_320x50"
        ads:adUnitId="@string/AD_ACTIVITY_MENU">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>